--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <table cellspacing='20'>
     <tr>
-      <td><img src="images/Sreyas without sign.png" alt="Sreyas Picture"></td>
+      <td><img src="Sreyas without sign.png" alt="Sreyas Picture"></td>
       <td>
         <h1>Vakkalanka Satya Sreyas</h1>
         <p> <em>Java developer at <strong> <a href="https://audintel.com/">AUDINTEL</a> </strong> </em> </p>
